--- a/job-dsl/SAST_config.yml
+++ b/job-dsl/SAST_config.yml
@@ -21,14 +21,21 @@ JAPAN:
         git_url: "git@github.com:lemonfisk/TOKIO.git"
         ptai_language: "Java"
         ptai_jdk_version: "11"
+#      depend_on:
+#        - name: PREFECTURA
+#          params:
+#            project_git_branch: "develop/1.1.5"
+#            git_url: "git@github.com:lemonfisk/PREFECTURA.git"
+#            ptai_language: "Java"
+#            ptai_jdk_version: "17"
 
-    - name: PREFECTURA
-      depend_on: TOKIO
-      params:
-        project_git_branch: "develop/1.1.5"
-        git_url: "git@github.com:lemonfisk/PREFECTURA.git"
-        ptai_language: "Java"
-        ptai_jdk_version: "17"
+#    - name: PREFECTURA
+#      depend_on: TOKIO
+#      params:
+#        project_git_branch: "develop/1.1.5"
+#        git_url: "git@github.com:lemonfisk/PREFECTURA.git"
+#        ptai_language: "Java"
+#        ptai_jdk_version: "17"
 
 CHINA:
   rootDir: "CHINA/SAST"
@@ -40,11 +47,11 @@ CHINA:
         git_url: "git@github.com:lemonfisk/PEKIN.git"
         ptai_language: "JavaScript"
 
-RUSSIA:
-  rootDir: "RUSSIA/SAST"
-  product_git_url: "https://api.github.com/repos/lemonfisk/RUSSIA"
-  components:
-    - name: RUSSIA
-      params:
-        project_git_branch: "develop/3.7.1"
-        ptai_language: "Python"
+#RUSSIA:
+#  rootDir: "RUSSIA/SAST"
+#  product_git_url: "https://api.github.com/repos/lemonfisk/RUSSIA"
+#  components:
+#    - name: RUSSIA
+#      params:
+#        project_git_branch: "develop/3.7.1"
+#        ptai_language: "Python"
