--- a/job-dsl/SAST_config.yml
+++ b/job-dsl/SAST_config.yml
@@ -5,24 +5,27 @@ JAPAN:
   components:
     - name: YOKO
       params:
-        project_git_branch: "develop/1.1.2"
         git_url: "git@github.com:lemonfisk/YOKO.git"
         ptai_language: "Python"
 
     - name: FUDZI
       params:
-        project_git_branch: "develop/1.1.3"
         git_url: "git@github.com:lemonfisk/FUDZI.git"
         ptai_language: "Python"
 
     - name: TOKIO
       params:
-        project_git_branch: "develop/1.1.5"
         git_url: "git@github.com:lemonfisk/TOKIO.git"
         ptai_language: "Java"
         ptai_jdk_version: "11"
 #      depend_on:
 #        - name: PREFECTURA
+#          params:
+#            project_git_branch: "develop/1.1.5"
+#            git_url: "git@github.com:lemonfisk/PREFECTURA.git"
+#            ptai_language: "Java"
+#            ptai_jdk_version: "17"
+#        - name: MERLIN
 #          params:
 #            project_git_branch: "develop/1.1.5"
 #            git_url: "git@github.com:lemonfisk/PREFECTURA.git"
@@ -43,7 +46,6 @@ CHINA:
   components:
     - name: PEKIN
       params:
-        project_git_branch: "develop/1.1.4"
         git_url: "git@github.com:lemonfisk/PEKIN.git"
         ptai_language: "JavaScript"
 
